subscriber and consumer component with project structure
- consumer trait added
- nats subscriber and worker added
- llm trait added
- main entry point added with initializations
- nats message added
- dependencies updated
- TODO updated

--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,13 @@ id = "ml-inference-candle"
 
 [log]
 level = "DEBUG"
+
+[consumer]
+type = "nats"
+url = "nats://demo.nats.io:4222"
+subject = "bmonikraj.ml-inference-candle.rs"
+
+[llm]
+type = "smol"
+llm_model_path = ""
+embedding_model_path = ""
