--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-nats = "0.38.0"
+chrono = "0.4.38"
 config = "0.14.1"
 env_logger = "0.11.5"
+futures = "0.3.31"
 log = "0.4.22"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
+tokio = { version = "1.41.1", features = ["full"] }
 uuid = "1.11.0"
