--- a/config.toml
+++ b/config.toml
@@ -10,10 +10,12 @@ url = "nats://demo.nats.io:4222"
 subject = "bmonikraj.ml-inference-candle.rs"
 
 [llm]
-type = "smol"
+type = "qwen"
 llm_model_path = ""
 embedding_model_path = ""
 persist = "true"
 
 [writer]
-type = "minio"
+type = "echo"
+endpoint = "https://echo.free.beeceptor.com"
+base_path = "5finv"
