--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,20 @@ edition = "2021"
 
 [dependencies]
 async-nats = "0.38.0"
+base64 = "0.22.1"
 chrono = "0.4.38"
 config = "0.14.1"
 env_logger = "0.11.5"
 futures = "0.3.31"
 log = "0.4.22"
+prost = "0.13.4"
 reqwest = { version = "0.12.9", features = ["blocking"] }
+rustls = { version = "0.23.20", default-features = false, features = ["log", "logging", "std", "ring", "tls12"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 tokio = { version = "1.41.1", features = ["full"] }
-uuid = "1.11.0"
+tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
+uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
+
+[build-dependencies]
+tonic-build = "0.12.3"
